# tickets-module-api/resources/api.yaml
@@ -7,6 +7,79 @@ tags:
   - name: TicketsResource
     description: "API для работы с билетами"
 paths:
+  /login:
+    post:
+      description: Аутентификация пользователя
+      operationId: login
+      tags:
+        - OauthController
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "types.yaml#/components/schemas/LoginRequest"
+      responses:
+        200:
+          description: Успешно
+          content:
+            application/json:
+              schema:
+                $ref: "types.yaml#/components/schemas/LoginResponse"
+        400:
+          description: Ошибка в параметрах запроса
+          content:
+            application/json:
+              schema:
+                $ref: "types.yaml#/components/schemas/ErrorResponse"
+        404:
+          description: Объект не найден
+        500:
+          description: Ошибка сервера/сервиса/БД
+          content:
+            application/json:
+              schema:
+                $ref: "types.yaml#/components/schemas/ErrorResponse"
+
+  /token:
+    post:
+      description: Обновление access токена по refresh токену
+      operationId: refreshToken
+      tags:
+        - OauthController
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "types.yaml#/components/schemas/RefreshTokenRequest"
+      responses:
+        200:
+          description: Успешно
+          content:
+            application/json:
+              schema:
+                $ref: "types.yaml#/components/schemas/LoginResponse"
+        401:
+          description: Невалидный refresh token
+
+  /register:
+    post:
+      description: Регистрация пользователя
+      operationId: register
+      tags:
+        - OauthController
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "types.yaml#/components/schemas/RegisterRequest"
+      responses:
+        201:
+          description: Успешно
+          content:
+            application/json:
+              schema:
+                $ref: "types.yaml#/components/schemas/LoginResponse"
+
   /carriers:
     post:
       description: Метод создания компании перевозчика
@@ -127,7 +200,7 @@ paths:
 
     patch:
       description: Частичное обновление данных компании перевозчика по id
-      operationId: patch
+      operationId: patchCarrier
       tags:
         - CarriersController
       parameters:
@@ -145,7 +218,7 @@ paths:
               $ref: "patch-types.yaml#/components/schemas/CarrierPatchRequest"
       responses:
         201:
-          description: Заявление успешно обновлено
+          description: Компания перевозчик успешно обновлена
           content:
             application/json:
               schema:
@@ -161,30 +234,115 @@ paths:
         403:
           description: Пользователь не имеет ни одной из необходимых ролей
 
-  /login:
+  /routes:
     post:
-      description: Аутентификация пользователя
-      operationId: login
+      description: Метод создания маршрута
+      operationId: createRoute
       tags:
-        - OauthController
+        - RoutesController
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "types.yaml#/components/schemas/LoginRequest"
+              $ref: "types.yaml#/components/schemas/CreateRouteRequest"
       responses:
-        200:
-          description: Успешно
+        201:
+          description: Маршрут успешно сохранен
           content:
             application/json:
               schema:
-                $ref: "types.yaml#/components/schemas/LoginResponse"
+                $ref: "types.yaml#/components/schemas/CreateRouteResponse"
         400:
           description: Ошибка в параметрах запроса
           content:
             application/json:
               schema:
                 $ref: "types.yaml#/components/schemas/ErrorResponse"
+        401:
+          description: Отсутствует или невалиден JWT-токен
+        403:
+          description: Пользователь не имеет ни одной из необходимых ролей
+        500:
+          description: Внутренняя ошибка сервера
+    get:
+      description: Метод предоставления списка маршрутов
+      operationId: getAllRoutes
+      tags:
+        - RoutesController
+      parameters:
+        - in: query
+          name: pageable
+          required: false
+          schema:
+            $ref: "types.yaml#/components/schemas/Pageable"
+        - in: query
+          name: searchParam
+          required: false
+          schema:
+            $ref: "types.yaml#/components/schemas/RoutesSearchRequest"
+      responses:
+        200:
+          description: Поиск выполнен успешно
+          headers:
+            X-Total-Count:
+              description: Общее количество элементов при постраничном отображении
+              schema:
+                type: integer
+                format: int32
+                example: 100
+            Link:
+              description: Ссылки на страницы
+              schema:
+                type: string
+                format: uri
+          content:
+            application/json:
+              schema:
+                $ref: "types.yaml#/components/schemas/Page"
+        400:
+          description: Ошибка в параметрах запроса
+          content:
+            application/json:
+              schema:
+                $ref: "types.yaml#/components/schemas/ErrorResponse"
+        401:
+          description: Отсутствует или невалиден JWT-токен
+        404:
+          description: Объекты не найдены
+        500:
+          description: Внутренняя ошибка сервера
+
+  /routes/{id}:
+    get:
+      description: Метод получения маршрута по id
+      operationId: getRoute
+      tags:
+        - RoutesController
+      parameters:
+        - name: id
+          in: path
+          description: Идентификатор маршрута
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: Операция обработана успешно, результат предоставлен
+          content:
+            application/json:
+              schema:
+                $ref: "types.yaml#/components/schemas/CreateRouteResponse"
+        400:
+          description: Переданы не корректные параметры запроса
+          content:
+            application/json:
+              schema:
+                $ref: "types.yaml#/components/schemas/ErrorResponse"
+        401:
+          description: Отсутствует или невалиден JWT-токен
+        403:
+          description: Пользователь не имеет ни одной из необходимых ролей
         404:
           description: Объект не найден
         500:
@@ -193,43 +351,40 @@ paths:
             application/json:
               schema:
                 $ref: "types.yaml#/components/schemas/ErrorResponse"
-  /token:
-    post:
-      description: Обновление access токена по refresh токену
-      operationId: refreshToken
-      tags:
-        - OauthController
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "types.yaml#/components/schemas/RefreshTokenRequest"
-      responses:
-        200:
-          description: Успешно
-          content:
-            application/json:
-              schema:
-                $ref: "types.yaml#/components/schemas/LoginResponse"
-        401:
-          description: Невалидный refresh token
 
-  /register:
-    post:
-      description: Регистрация пользователя
-      operationId: register
+    patch:
+      description: Частичное обновление данных маршрута по id
+      operationId: patchRoute
       tags:
-        - OauthController
+        - RoutesController
+      parameters:
+        - name: id
+          in: path
+          description: Идентификатор маршрута
+          required: true
+          schema:
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "types.yaml#/components/schemas/RegisterRequest"
+              $ref: "patch-types.yaml#/components/schemas/RoutePatchRequest"
       responses:
         201:
-          description: Успешно
+          description: Маршрут успешно обновлен
           content:
             application/json:
               schema:
-                $ref: "types.yaml#/components/schemas/LoginResponse"
+                $ref: "types.yaml#/components/schemas/CreateRouteResponse"
+        400:
+          description: Ошибка в параметрах запроса
+          content:
+            application/json:
+              schema:
+                $ref: "types.yaml#/components/schemas/ErrorResponse"
+        401:
+          description: Отсутствует или невалиден JWT-токен
+        403:
+          description: Пользователь не имеет ни одной из необходимых ролей
 
